<resources>
    <string name="app_name">Engappsados</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">SIGUIENTE</string>
    <string name="skip">SALTAR</string>
    <string name="start">ENTENDIDO</string>

    <string name="perm_title">Permisos del Usuario</string>
    <string name="perm_desc">EngAppsados necesita que le concedas permisos para poder
        acceder a datos de estadísticas de uso del dispositivo, como por ejemplo,
        aplicaciones instaladas y su tiempo de uso. Agradecemos tu comprensión :)</string>

    <string name="slide_1_title">Bienvenido</string>
    <string name="slide_1_desc">EngAppsados es la  aplicación que te permite conocer las últimas
        noticias de tecnología en Guatemala. Además puedes probar las nuevas aplicaciones
        desarrolladas por guatemaltecos  y recibir una recompensa por ello.</string>

    <string name="slide_2_title">Recompensas</string>
    <string name="slide_2_desc">Con EngAppsados podrás  obtener descuentos y promociones en
                                restaurantes, cines y mucho más.</string>

    <string name="slide_3_title">Tareas por Cumplir</string>
    <string name="slide_3_desc">Sólo debes de completar las tareas que te daremos.
        \n\nPuedes: Probar apps nuevas,  Responder encuestas, Buscar bugs dentro de
        aplicaciones en desarrollo y subir fotos de lugares específicos.</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>

    <string name="txt_nombre">nombre</string>
    <string name="txt_mail">correo</string>
    <string name="txt_login">Login</string>
    <string name="txt_politicas">Al tocar el boton de  sign in acepta los </string>
    <string name="txt_terminosDeUso"><u>Terminos y Condiciones</u></string>

    <string name="txt_menu_task">Ver lista de tareas</string>
    <string name="txt_menu_testGTApp">Probar Apps Guatemaltecas</string>
    <string name="txt_menu_rewards">Recompensas</string>
    <string name="noticia">Noticia</string>
    <string name="pruebaa">pruebaa</string>
    <string name="leer_mas">Leer Mas</string>
    <string name="tab_noticias">Aqui va la pantalla de noticias</string>
    <string name="tab_encuestas">Aqui va la pantalla de encuestas</string>
    <string name="tab_tienda">Aqui va la pantalla de tienda</string>
    <string name="tab_appsa">Aqui va la pantalla de apps</string>
    <string name="action_User">Mi Perfil</string>
    <string name="action_Bug">Reporte de Bugs</string>

    <!-- politicas de uso-->
    <string name="politics_title">Políticas y Términos de uso</string>
    <string name="genio_de_la_informatica_trabajando_en_android">Genio de la informatica trabajando en Android</string>

    <!-- Para ActicidadDelPerfilDeUsuario-->
    <string name="txtVNombre">[Name]</string>
    <string name="txtVpuntos">[Puntos]</string>

    <string name="title_activity_menu_tabbed">MenuTabbed</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="descripcion">Descripcion</string>
    <string name="poll_btn">Hacer encuesta! </string>
    <string name="reward_btn">Canjear</string>
    <string name="title">Title</string>
    <string name="Desc">Description</string>
    <string name="title_activity_developer_activity">Developer_activity</string>
</resources>
