<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp">

    <ImageView
        android:id="@+id/poll_Img"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_assignment_black_24dp"
        android:layout_margin="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/poll_Title"
            android:layout_margin="2dp"
            style="@style/Base.TextAppearance.AppCompat.Title"
            android:text="@string/title"/>

        <TextView
            android:id="@+id/poll_Desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Desc"
            android:layout_margin="2dp"/>

        <Button
            android:id="@+id/poll_btnDoPoll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/poll_btn"
            android:layout_margin="10dp"/>

    </LinearLayout>
</LinearLayout>