<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.engappsados.engappsadosapp.MenuPrincipalActivity">

    <LinearLayout
        android:id="@+id/layoutMenuPrincipal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:background= "#3f374f"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@android:drawable/checkbox_on_background" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:text="@string/txt_menu_task" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:text="@string/txt_menu_testGTApp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:text="@string/txt_menu_rewards" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonReward"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="149dp"
            android:layout_height="wrap_content"
            android:text="Recompensas"
            android:layout_gravity="center"
            android:icon="@drawable/ic_card_giftcard_black_24dp"
            android:drawableTop="@drawable/ic_card_giftcard_black_24dp"/>


        <Button
            android:id="@+id/buttonNoticias"
            android:layout_width="149dp"
            android:layout_height="wrap_content"
            android:text="Noticias"
            android:layout_gravity="center"
            android:drawableTop="@drawable/ic_library_books_black_24dp"/>

        <Button
            android:id="@+id/buttonTareas"
            android:layout_width="149dp"
            android:layout_height="wrap_content"
            android:text="Tareas"
            android:layout_gravity="center"
            android:drawableTop="@drawable/ic_assignment_black_24dp"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
